# yolo-football-demo

./: .gitignore  README.md  main.py  pyproject.toml
db/: db.pkl
src/my_app/: training.py
trackers/: tracker.py
utils/: __init__.py  box_utility.py  video_utility.py
