[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Bonki",email = "sammit123789@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ultralytics (>=8.3.195,<9.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "supervision (>=0.26.1,<0.27.0)"
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
